samples/_failures_safe/1761624085_3c0049_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1317ec1.c: In function ‘main’:
./samples/SAFE/__tmp_a1317ec1.c:138:29: error: missing terminating " character
  138 |             fprintf(stderr, "
      |                             ^
./samples/SAFE/__tmp_a1317ec1.c:138:13: error: expected expression at end of input
  138 |             fprintf(stderr, "
      |             ^~~~~~~
./samples/SAFE/__tmp_a1317ec1.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1317ec1.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1317ec1.c:138:13: error: expected declaration or statement at end of input
